--- a/app/easyui/combotree/asyncTree.html
+++ b/app/easyui/combotree/asyncTree.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<link rel="stylesheet" href="../../../public/jquery-easyui-1.5/themes/default/easyui.css"/>
+	<link rel="stylesheet" href="../../../public/jquery-easyui-1.5/themes/icon.css"/>
 </head>
 <body>
 	<input id="inputCombotree"/>
-	<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.slim.min.js"></script>
-	<script src="/public/jquery-easyui-1.5/jquery.easyui.min.js"></script>
+	<script src="../../../public/jquery-easyui-1.5/jquery.min.js"></script>
+	<script src="../../../public/jquery-easyui-1.5/jquery.easyui.min.js"></script>
 	<script src="asyncTree.js"></script>
 </body>
 </html>
