[fix]文件引用路径错误

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<li>
 		<a href="javascript:;">easyui 个人例子demo</a>
 		<ul>
-			<li><a href="/app/easyui/combotree/asyncTree.html">异步树-前端写法</a></li>
+			<li><a target="_blank" href="./app/easyui/combotree/asyncTree.html">异步树-前端写法</a></li>
 		</ul>
 	</li>
 </ul>
