--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 			<li><a target="_blank" href="./app/easyui/combotree/asyncTree.html">异步树-前端写法</a></li>
 		</ul>
 	</li>
+	<li>
+		<a href="javascript:;">JS基础</a>
+		<ul>
+			<li><a target="_blank" href="./app/jsBasic/jsButtonDownloadFile/index.html">js点击按钮下载文件</a></li>
+		</ul>
+	</li>
 </ul>
 
 </body>
