--- a/app/jsBasic/jsButtonDownloadFile/index.html
+++ b/app/jsBasic/jsButtonDownloadFile/index.html
@@ -72,7 +72,7 @@ $eleBtn2.click(function(){
 	</pre>
 </div>
 
-<script src="../jquery-1.11.3.min.js"></script>
+<script src="../../../public/jquery-easyui-1.5/jquery.min.js"></script>
 <script>
 	$(function(){
 		var $eleBtn1 = $("#btn1");
