--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 			<li><a target="_blank" href="./app/css/button/switch/switch.html">switch开关按钮</a></li>
 		</ul>
 	</li>
+  <li>
+    <a href="javascript:;">jQuery相关</a>
+    <ul>
+      <li><a target="_blank" href="./app/jquery/extendDemo.html">jq插件 扩展 demo</a></li>
+    </ul>
+  </li>
 </ul>
 
 </body>
